APIs/microsoft.com/cognitiveservices-Prediction/1.1/java-client/README.md
# openapi-java-client

PredictionEndpoint
- API version: 1.1
  - Build date: 2024-10-12T10:10:23.259149-04:00[America/New_York]
  - Generator version: 7.9.0

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)


*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>1.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:1.1"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-1.1.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ImagePredictionApiApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://southcentralus.api.cognitive.microsoft.com/customvision/v1.1/Prediction");

    ImagePredictionApiApi apiInstance = new ImagePredictionApiApi(defaultClient);
    UUID projectId = UUID.fromString("64b822c5-8082-4b36-a426-27225f4aa18c"); // UUID | The project id
    String predictionKey = "{API Key}"; // String | 
    File imageData = new File("/path/to/file"); // File | 
    UUID iterationId = UUID.fromString("fe1e83c4-6f50-4899-9544-6bb08cf0e15a"); // UUID | Optional. Specifies the id of a particular iteration to evaluate against.              The default iteration for the project will be used when not specified
    String application = "application_example"; // String | Optional. Specifies the name of application using the endpoint
    try {
      ImagePredictionResultModel result = apiInstance.predictImage(projectId, predictionKey, imageData, iterationId, application);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling ImagePredictionApiApi#predictImage");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://southcentralus.api.cognitive.microsoft.com/customvision/v1.1/Prediction*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ImagePredictionApiApi* | [**predictImage**](docs/ImagePredictionApiApi.md#predictImage) | **POST** /{projectId}/image | Predict an image and saves the result
*ImagePredictionApiApi* | [**predictImageUrl**](docs/ImagePredictionApiApi.md#predictImageUrl) | **POST** /{projectId}/url | Predict an image url and saves the result
*ImagePredictionApiApi* | [**predictImageUrlWithNoStore**](docs/ImagePredictionApiApi.md#predictImageUrlWithNoStore) | **POST** /{projectId}/url/nostore | Predict an image url without saving the result
*ImagePredictionApiApi* | [**predictImageWithNoStore**](docs/ImagePredictionApiApi.md#predictImageWithNoStore) | **POST** /{projectId}/image/nostore | Predict an image without saving the result


## Documentation for Models

 - [ImagePredictionResultModel](docs/ImagePredictionResultModel.md)
 - [ImageTagPredictionModel](docs/ImageTagPredictionModel.md)
 - [ImageUrl](docs/ImageUrl.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization

Endpoints do not require authorization.


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



