APIs/microsoft.com/cognitiveservices-Prediction/3.0/java-client/README.md
# openapi-java-client

Custom Vision Prediction Client
- API version: 3.0
  - Build date: 2024-10-12T10:10:28.361474-04:00[America/New_York]
  - Generator version: 7.9.0

No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)


*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>3.0</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:3.0"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-3.0.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ImagePredictionApiApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://southcentralus.api.cognitive.microsoft.com/customvision/v3.0/prediction");
    
    // Configure API key authorization: apim_key
    ApiKeyAuth apim_key = (ApiKeyAuth) defaultClient.getAuthentication("apim_key");
    apim_key.setApiKey("YOUR API KEY");
    // Uncomment the following line to set a prefix for the API key, e.g. "Token" (defaults to null)
    //apim_key.setApiKeyPrefix("Token");

    ImagePredictionApiApi apiInstance = new ImagePredictionApiApi(defaultClient);
    UUID projectId = UUID.fromString("64b822c5-8082-4b36-a426-27225f4aa18c"); // UUID | The project id.
    String publishedName = "MyModel1"; // String | Specifies the name of the model to evaluate against.
    File imageData = new File("/path/to/file"); // File | Binary image data. Supported formats are JPEG, GIF, PNG, and BMP. Supports images up to 4MB.
    String application = "application_example"; // String | Optional. Specifies the name of application using the endpoint.
    try {
      ImagePrediction result = apiInstance.classifyImage(projectId, publishedName, imageData, application);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling ImagePredictionApiApi#classifyImage");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://southcentralus.api.cognitive.microsoft.com/customvision/v3.0/prediction*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ImagePredictionApiApi* | [**classifyImage**](docs/ImagePredictionApiApi.md#classifyImage) | **POST** /{projectId}/classify/iterations/{publishedName}/image | Classify an image and saves the result.
*ImagePredictionApiApi* | [**classifyImageUrl**](docs/ImagePredictionApiApi.md#classifyImageUrl) | **POST** /{projectId}/classify/iterations/{publishedName}/url | Classify an image url and saves the result.
*ImagePredictionApiApi* | [**classifyImageUrlWithNoStore**](docs/ImagePredictionApiApi.md#classifyImageUrlWithNoStore) | **POST** /{projectId}/classify/iterations/{publishedName}/url/nostore | Classify an image url without saving the result.
*ImagePredictionApiApi* | [**classifyImageWithNoStore**](docs/ImagePredictionApiApi.md#classifyImageWithNoStore) | **POST** /{projectId}/classify/iterations/{publishedName}/image/nostore | Classify an image without saving the result.
*ImagePredictionApiApi* | [**detectImage**](docs/ImagePredictionApiApi.md#detectImage) | **POST** /{projectId}/detect/iterations/{publishedName}/image | Detect objects in an image and saves the result.
*ImagePredictionApiApi* | [**detectImageUrl**](docs/ImagePredictionApiApi.md#detectImageUrl) | **POST** /{projectId}/detect/iterations/{publishedName}/url | Detect objects in an image url and saves the result.
*ImagePredictionApiApi* | [**detectImageUrlWithNoStore**](docs/ImagePredictionApiApi.md#detectImageUrlWithNoStore) | **POST** /{projectId}/detect/iterations/{publishedName}/url/nostore | Detect objects in an image url without saving the result.
*ImagePredictionApiApi* | [**detectImageWithNoStore**](docs/ImagePredictionApiApi.md#detectImageWithNoStore) | **POST** /{projectId}/detect/iterations/{publishedName}/image/nostore | Detect objects in an image without saving the result.


## Documentation for Models

 - [BoundingBox](docs/BoundingBox.md)
 - [CustomVisionError](docs/CustomVisionError.md)
 - [ImagePrediction](docs/ImagePrediction.md)
 - [ImageUrl](docs/ImageUrl.md)
 - [Prediction](docs/Prediction.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="apim_key"></a>
### apim_key

- **Type**: API key
- **API key parameter name**: Prediction-Key
- **Location**: HTTP header


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



